--- a/index.html
+++ b/index.html
@@ -6,11 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch a Sketch</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-
+    <div class="main">
+        <div class="content">
+            <div class="settings">
+                <div class="grid-resize">
+                    <label for="grid-resize" class="size-value"></label>
+                    <input type="range" id="grid-resize" min="4" max="100">
+                </div>
+                <div class="buttons">
+                    <button id="clear" class="settings-buttons hover" title="Click here to clear the board">Clear All</button>
+                    <button id="reset" class="settings=buttons hover" title="Click here to go back to original settings - this will clear the board">Reset</button>
+                    <button id="change-mode" class="settings-buttons hover" title="Click here to change the mode">Drawing Mode: Hover</button>
+                    <button id="random-color" class="settings-buttons hover">Rainbow mode!</button>
+                    <button id="ink" class="settings-buttons hover">Ink mode</button>
+                    <button id="eraser" class="settings-buttons hover"><img src="images/rubber.svg">Eraser</button>
+                </div>
+                <p>Tip: Right-click on the Sketchpad to pick a random color</p>
+            </div>
+            <div class="draw-area">
+                <h1>SketchPad</h1>
+                <div class="container" oncontextmenu="return false;">
+                </div>
+                <!-- TODO
+                <a id="download" download="beautifulDrawing.jpg">Save</a> -->
+            </div>
+        </div>
     </div>
+    <footer>
+        <p>Created by Cédric</p> 
+        <a href="https://github.com/cedvid" target="_blank"><img src="images/github.png" alt="github"></a>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
