Refactor JS logic and change CSS

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                     <input type="range" id="grid-resize" min="4" max="100">
                 </div>
                 <div class="buttons">
-                    <button id="clear" class="settings-buttons hover" title="Click here to clear the board">Clear All</button>
-                    <button id="reset" class="settings=buttons hover" title="Click here to go back to original settings - this will clear the board">Reset</button>
-                    <button id="change-mode" class="settings-buttons hover" title="Click here to change the mode">Drawing Mode: Hover</button>
-                    <button id="random-color" class="settings-buttons hover">Rainbow mode!</button>
-                    <button id="ink" class="settings-buttons hover">Ink mode</button>
+                    <button id="clear" class="settings-buttons hover" title="Clear the board">Clear All</button>
+                    <button id="reset" class="settings=buttons hover" title="Go back to original settings">Reset</button>
+                    <button id="change-mode" class="settings-buttons hover" title="Change the drawing mode, hover or click">Drawing Mode: Hover</button>
+                    <button id="random-color" class="settings-buttons hover" title="Draw with random colors">Rainbow mode!</button>
+                    <button id="shade-mode" class="settings-buttons hover" disabled>Shade mode</button>
                     <button id="eraser" class="settings-buttons hover"><img src="images/rubber.svg">Eraser</button>
                 </div>
                 <p>Tip: Right-click on the Sketchpad to pick a random color</p>
